--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "upvotes-store",
     "version": "0.0.1",
     "main": "index.js",
+    "type": "module",
     "contributors": [
         {
             "name": "Aaron"
