--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "jsdom": "^19.0.0",
         "jwt-decode": "^3.1.2",
         "mongoose": "^6.2.10",
         "node-fetch-cookies": "^2.0.4",
         "promise-retry": "^2.0.1"
+    },
+    "devDependencies": {
+        "eslint": "^8.12.0",
+        "prettier": "2.6.2"
     }
 }
