--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
-        "es2021": true,
-        "browser": true
+        "commonjs": true,
+        "es6": true,
+        "node": true
     },
     "extends": ["eslint:recommended", "prettier"],
     "parserOptions": {
@@ -10,7 +11,12 @@
     },
     "plugins": ["prettier"],
     "rules": {
-        "code": 200,
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "max-len": [
+            "error",
+            {
+                "code": 240
+            }
+        ]
     }
 }
